syntax = "proto2";

import "typeelement.proto";

message ElementMessage {
    required TypeOfElementProto element_type = 1;

    optional string node_type = 2;
    optional string node_name = 3;

    optional int32 rel_parent_id = 4;
    optional int32 rel_child_id = 5;
    optional int32 

    optional int32 subject_id = 2;
    optional string subject_type = 3;
    
    optional int32 child_id = 4;
    optional string child_type = 5;

    optional string value = 6;

    optional string subject_name = 7;
}