syntax = "proto2";

enum TypeOfElementProto {
    NODE = 0;
    RELATIONSHIP = 1;
    PROPERTY = 2;
    ENTITY = 3;
}
