syntax = "proto2";

message SimpleNodeMessage {
    required string type = 1;
    required int32 id = 2;
    required string name = 3;
}
