syntax = "proto2";

enum ValueTypeProto {
    INT = 0;
    FLOAT = 1;
    STRING = 2;
    BOOL = 3;
    VOID = 4;
}
